--- a/content/assets/stylesheets/default.scss
+++ b/content/assets/stylesheets/default.scss
@@ -1,24 +1,72 @@
-@import "compass/reset";
-@import "compass/css3/box-sizing";
+@import "reset";
+$green: #8CC140;
+$black: #1A1919;
 
-* { @include box-sizing(border-box) }
+li { margin-left: 20px; }
 
 body {
+  padding-bottom: 80px;
+
   background: white;
   color: black;
-  font-family: Helvetica, sans-serif;
+  font-family: "Myriad Pro", Helvetica, sans-serif;
   font-size: 15px;
 }
 
-#guidelines {
+#header {
+  margin: 200px 0;
+}
+
+h1 {
+  text-align: center;
+  font-size: 60px;
+  color: $black;
+}
+
+h2 {
+  line-height: 1.3;
+  text-align: center;
+  font-size: 40px;
+  color: $green;
+  margin-bottom: 40px;
+}
+
+section {
   max-width: 620px;
-  margin: 20px auto;
+  margin: 0 auto;
 
-  p + p { margin-top: 20px; }
+  & + section { margin-top: 80px; }
+}
 
-  li + li {
-    border-top: 1px dashed #ccc;
-    padding-top: 20px;
-    margin-top: 20px;
+ol.guidelines {
+  counter-reset: guideline;
+
+  li.guideline {
+    margin-left: 0;
+    overflow: hidden;
+
+    list-style-type: none;
+    counter-increment: guideline;
+
+    &:before {
+      content: counter(guideline);
+      display: block;
+      float: left;
+      width: 60px;
+      height: 60px;
+      border-radius: 30px;
+      background: $green;
+
+      line-height: 64px;
+      text-align: center;
+      font-size: 36px;
+      color: white;
+    }
   }
+
+  li.guideline + li { margin-top: 40px; }
+  div.text { margin-left: 80px; }
+  p { line-height: 1.4; }
+  p + p { margin-top: 20px; }
+  ul, ol { margin-top: 10px; }
 }
