--- a/content/assets/stylesheets/default.scss
+++ b/content/assets/stylesheets/default.scss
@@ -31,6 +31,10 @@ h2 {
   margin-bottom: 40px;
 }
 
+h3 {
+  font-weight: bold;
+}
+
 section {
   max-width: 620px;
   margin: 0 auto;
@@ -75,5 +79,5 @@ a.edit {
   color: #e0e0e0 !important;
   font-size: 16px !important;
   text-decoration: none !important;
-  &:hover { color: $green !important; }
+  &:hover { color: black !important; }
 }
