Move network usage guideline to network category.

--- a/content/index.haml
+++ b/content/index.haml
@@ -63,6 +63,7 @@ title: "Nutikaitse"
     = render "_guideline", :name => "nfc"
     = render "_guideline", :name => "server-security-testing"
     = render "_guideline", :name => "server-hardening"
+    = render "_guideline", :name => "network-usage"
     = render "_guideline", :name => "dos"
     = render "_guideline", :name => "dos-test"
     = render "_guideline", :name => "backend-testing"
