Wrap links if too long.

--- a/content/assets/stylesheets/default.scss
+++ b/content/assets/stylesheets/default.scss
@@ -75,6 +75,7 @@ ol.guidelines {
   p { line-height: 1.4; }
   p + p { margin-top: 20px; }
   ul, ol { margin-top: 10px; }
+  a { word-wrap: break-word; }
 }
 
 a.edit {
