--- a/content/index.haml
+++ b/content/index.haml
@@ -4,7 +4,18 @@ title: "Nutikaitse"
 %header#header
   %h1 Nutikaitse
 
-%section
+%nav#toc
+  %ol
+    %li
+      %a(href="#authentication") Autentimine
+    %li
+      %a(href="#data") Andmete kaitse seadmes
+    %li
+      %a(href="#network") Andmete kaitse võrgus
+    %li
+      %a(href="#app") Rakenduse kaitse
+
+%section#authentication
   %h2 Autentimine
   %ol.guidelines
     = render "_guideline", :name => "authorization-tokens"
@@ -26,7 +37,7 @@ title: "Nutikaitse"
     = render "_guideline", :name => "mobile-id-code"
     = render "_guideline", :name => "mobile-id-certificates"
 
-%section
+%section#data
   %h2 Andmete kaitse seadmes
   %ol.guidelines
     = render "_guideline", :name => "data-sensitivity"
@@ -49,7 +60,7 @@ title: "Nutikaitse"
     = render "_guideline", :name => "data-validation"
     = render "_guideline", :name => "digital-signature-algorithms"
 
-%section
+%section#network
   %h2 Andmete kaitse võrgus
   %ol.guidelines
     = render "_guideline", :name => "authorization-key-transmit"
@@ -67,7 +78,7 @@ title: "Nutikaitse"
     = render "_guideline", :name => "backend-testing"
     = render "_guideline", :name => "x-user-identification"
 
-%section
+%section#app
   %h2 Rakenduse kaitse
   %ol.guidelines
     = render "_guideline", :name => "app-permissions"
