--- a/content/index.haml
+++ b/content/index.haml
@@ -18,64 +18,63 @@ title: "Nutikaitse"
 %section#authentication
   %h2 Autentimine
   %ol.guidelines
-    = render "_guideline", :name => "authorization-tokens"
+    = render "_guideline", :name => "authentication-strength"
+    = render "_guideline", :name => "2-factor-authentication"
+    = render "_guideline", :name => "delegated-authentication"
+    = render "_guideline", :name => "user-identity"
+    = render "_guideline", :name => "visible-passwords"
+    = render "_guideline", :name => "password-charset"
+    = render "_guideline", :name => "touch-pattern"
     = render "_guideline", :name => "authentication-context"
     = render "_guideline", :name => "encrypt-passwords"
-    = render "_guideline", :name => "changing-passwords"
-    = render "_guideline", :name => "visible-passwords"
-    = render "_guideline", :name => "touch-pattern"
-    = render "_guideline", :name => "signout"
-    = render "_guideline", :name => "authentication-strength"
+    = render "_guideline", :name => "authorization-tokens"
     = render "_guideline", :name => "session-identifiers"
-    = render "_guideline", :name => "2-factor-authentication"
-    = render "_guideline", :name => "password-charset"
-    = render "_guideline", :name => "user-identity"
-    = render "_guideline", :name => "session-logs"
-    = render "_guideline", :name => "server-logs"
+    = render "_guideline", :name => "changing-passwords"
     = render "_guideline", :name => "identification-permission"
-    = render "_guideline", :name => "mobile-id-messages"
     = render "_guideline", :name => "mobile-id-code"
     = render "_guideline", :name => "mobile-id-certificates"
+    = render "_guideline", :name => "mobile-id-messages"
+    = render "_guideline", :name => "session-logs"
+    = render "_guideline", :name => "signout"
 
 %section#data
   %h2 Andmete kaitse seadmes
   %ol.guidelines
     = render "_guideline", :name => "data-sensitivity"
-    = render "_guideline", :name => "data-server"
-    = render "_guideline", :name => "data-encryption-vendor"
-    = render "_guideline", :name => "data-encryption"
-    = render "_guideline", :name => "context-security"
-    = render "_guideline", :name => "data-duration"
-    = render "_guideline", :name => "data-storage"
-    = render "_guideline", :name => "data-duration-2"
-    = render "_guideline", :name => "data-deletion"
-    = render "_guideline", :name => "data-lifecycle"
+    = render "_guideline", :name => "delicate-data"
     = render "_guideline", :name => "principle-of-least-knowledge"
+    = render "_guideline", :name => "data-duration"
+    = render "_guideline", :name => "data-lifecycle"
+    = render "_guideline", :name => "data-encryption"
+    = render "_guideline", :name => "encryption-algorithms"
+    = render "_guideline", :name => "data-encryption-vendor"
+    = render "_guideline", :name => "context-security"
+    = render "_guideline", :name => "data-storage"
+    = render "_guideline", :name => "data-deletion"
     = render "_guideline", :name => "data-deletion-remotely"
     = render "_guideline", :name => "data-backup"
-    = render "_guideline", :name => "encryption-algorithms"
     = render "_guideline", :name => "privacy-policy"
     = render "_guideline", :name => "data-leakage"
-    = render "_guideline", :name => "delicate-data"
     = render "_guideline", :name => "data-validation"
     = render "_guideline", :name => "digital-signature-algorithms"
+    = render "_guideline", :name => "data-server"
 
 %section#network
   %h2 Andmete kaitse võrgus
   %ol.guidelines
-    = render "_guideline", :name => "authorization-key-transmit"
     = render "_guideline", :name => "network-encryption"
-    = render "_guideline", :name => "trusting-certificates"
-    = render "_guideline", :name => "secure-channel"
+    = render "_guideline", :name => "certificate-trust"
+    = render "_guideline", :name => "certificate-checking"
     = render "_guideline", :name => "certificate-expiration"
+    = render "_guideline", :name => "network-usage"
     = render "_guideline", :name => "sms"
     = render "_guideline", :name => "nfc"
     = render "_guideline", :name => "server-security-testing"
     = render "_guideline", :name => "server-hardening"
-    = render "_guideline", :name => "network-usage"
     = render "_guideline", :name => "dos"
     = render "_guideline", :name => "dos-test"
     = render "_guideline", :name => "backend-testing"
+    = render "_guideline", :name => "server-logs"
     = render "_guideline", :name => "x-user-identification"
 
 %section#app
@@ -90,15 +89,15 @@ title: "Nutikaitse"
     = render "_guideline", :name => "terms-of-service"
     = render "_guideline", :name => "user-identification"
     = render "_guideline", :name => "terms-of-service-contradictions"
-    = render "_guideline", :name => "about"
     = render "_guideline", :name => "nonfree-features"
     = render "_guideline", :name => "usage-patterns"
     = render "_guideline", :name => "nonfree-authentication"
     = render "_guideline", :name => "nonfree-confirmation"
     = render "_guideline", :name => "nonfree-usage"
-    = render "_guideline", :name => "app-upgrades"
-    = render "_guideline", :name => "app-store-delay"
     = render "_guideline", :name => "app-store"
+    = render "_guideline", :name => "app-store-delay"
+    = render "_guideline", :name => "app-upgrades"
+    = render "_guideline", :name => "about"
     = render "_guideline", :name => "feedback"
     = render "_guideline", :name => "code-interpreter"
     = render "_guideline", :name => "code-interpreter-sandbox"
