Add logo and title.

--- a/content/index.haml
+++ b/content/index.haml
@@ -2,7 +2,9 @@
 title: "Nutikaitse"
 ---
 %header#header
-  %h1 Nutikaitse
+  %img.logo(alt="Nutikaitse"){:src => image_path("nutikaitse.png")}
+  %h1 Nutirakenduste turvalise arenduse suunised
+  %h2 Vaata Maailma SA
 
 %nav#toc
   %ol
