--- a/content/assets/stylesheets/default.scss
+++ b/content/assets/stylesheets/default.scss
@@ -1,4 +1,5 @@
 @import "reset";
+@import "lib";
 $green: #8CC140;
 $black: #1A1919;
 
@@ -14,8 +15,25 @@ body {
 }
 
 #header {
-  margin-top: 200px;
+  margin-top: 150px;
   margin-bottom: 200px;
+  text-align: center;
+
+  .logo {
+    display: block;
+    margin: 0 auto 50px;
+    @include image-2x("nutikaitse.png")
+  }
+
+  h1 {
+    font-size: 40px;
+    color: $black;
+  }
+
+  h2 {
+    margin-top: 20px;
+    font-size: 18px;
+  }
 }
 
 #toc {
@@ -32,13 +50,7 @@ body {
   }
 }
 
-h1 {
-  text-align: center;
-  font-size: 60px;
-  color: $black;
-}
-
-h2 {
+section h2 {
   line-height: 1.3;
   text-align: center;
   font-size: 40px;
@@ -46,7 +58,7 @@ h2 {
   margin-bottom: 40px;
 }
 
-h3 {
+section h3 {
   font-weight: bold;
 }
 
