--- a/content/index.haml
+++ b/content/index.haml
@@ -1,5 +1,5 @@
 ---
-title: "Nutikaitse"
+title: "NutiKaitse"
 ---
 %header#header
   %img.logo(alt="Nutikaitse"){:src => image_path("nutikaitse.png")}
@@ -9,6 +9,8 @@ title: "Nutikaitse"
 %nav#toc
   %ol
     %li
+      %a(href="#intro") Sissejuhatus
+    %li
       %a(href="#authentication") Autentimine
     %li
       %a(href="#data") Andmete kaitse seadmes
@@ -16,6 +18,51 @@ title: "Nutikaitse"
       %a(href="#network") Andmete kaitse võrgus
     %li
       %a(href="#app") Rakenduse kaitse
+
+%section#intro
+  %h2 Sissejuhatus
+  %p
+    Nutirakenduste turvalise arenduse suunised on välja töötatud projekti
+    „Nutikaitse 2017“ raames. „NutiKaitse 2017“ on 2013 aasta novembris
+    algatatud riigi ja erasektori koostöös läbiviidav projekt, mille eesmärk on
+    kaasa aidata mobiilsete e-teenuste ja lahenduste turvalisele toimimisele ja
+    kasutamisele ajal, mil veebitoimingud on kolinud inimese taskusse.
+
+  %p
+    „NutiKaitse 2017“ koostööleppe algatajad ja allkirjastajad on:
+
+  %ul
+    %li Sertifitseerimiskeskus
+    %li Riigi Infosüsteemi Amet
+    %li Swedbank Eesti
+    %li SEB Pank
+    %li Elion Ettevõtted
+    %li EMT
+    %li Elisa Eesti
+    %li Tele2 Eesti
+
+  %p
+    Projekti koordineerib Vaata Maailma Sihtasutus. Koostööleppega liitujad
+    soovivad üheskoos tõsta nutiseadmete kasutajate, arendajate ja müüjate
+    turvateadlikkust ning kasutamisoskusi, luues seejuures võimalusi, et
+    turvaline tarkvara oleks lihtsalt ja kasutajasõbralikult kättesaadav.
+
+  %h3 Dokumendi eesmärk
+  %p
+    Dokumendi eesmärgiks on sätestada põhinõuded ja suunised, mida tuleb
+    jälgida nutiseadmete jaoks rakenduste väljatöötamisel, sh nii riiklike
+    tellimuste puhul kui soovi korral ka eraettevõtluses.
+
+  %p
+    Nutirakenduste arenduse suunised on mõeldud töövahendina kasutamiseks nii
+    arenduste tellijale kui arendajale.
+
+  %p
+    Dokument käsitleb erinevaid nutirakenduste arendusega seotud teemasid.
+    Teemade kaupa on välja toodud põhinõuded, millega tuleb arendamisel
+    arvestada, et lõpptulemusena valmiks turvaline ja mugavalt kasutatav
+    mobiilirakendus, mille väljatöötamisel on arvesse võetud parimaid
+    arenduspraktikaid.
 
 %section#authentication
   %h2 Autentimine
