--- a/content/index.haml
+++ b/content/index.haml
@@ -18,6 +18,8 @@ title: "NutiKaitse"
       %a(href="#network") Andmete kaitse võrgus
     %li
       %a(href="#app") Rakenduse kaitse
+    %li
+      %a(href="#glossary") Mõisted
 
 %section#intro
   %h2 Sissejuhatus
@@ -150,3 +152,114 @@ title: "NutiKaitse"
     = render "_guideline", :name => "feedback"
     = render "_guideline", :name => "code-interpreter"
     = render "_guideline", :name => "code-interpreter-sandbox"
+
+%section#glossary
+  %h2 Mõisted
+  %dl
+    %dt Nutirakendus
+    %dd
+      Nutiseadme jaoks välja töötatud rakendusprogramm (app) või nutiseadme
+      jaoks kohaldatud veebirakendus.
+
+    %dt Nutiseade
+    %dd
+      Mobiilne seade (üldjuhul nutitelefon või tahvelarvuti), mis erineb
+      lihtsast mobiiltelefonist selle poolest, et võimaldab kasutada
+      tavaarvutile omaseid funktsioone. Nutiseadmel on tavaliselt puutetundlik
+      ekraan, internetiühendus ja operatsioonisüsteem, mis võimaldab kasutada
+      allalaetavaid nutirakendusi.
+
+    %dt Mobiil-ID
+    %dd
+      Mobiil-ID on Eesti Vabariigi ID-kaardil põhinev isikusamasuse tõendamise
+      ning digitaalse allkirjastamise lahendus, mis võimaldab kasutajal end
+      mobiilseadme vahendusel autentida.  
+
+    %dt Isikuandmed
+    %dd
+      %p
+        Isikuandmed on mis tahes andmed tuvastatud või tuvastatava füüsilise
+        isiku kohta, sõltumata sellest, millisel kujul või millises vormis need
+        andmed on.
+
+      %p
+        Isikuandmete, sh delikaatsete isikuandmete, kaitset reguleerib <a
+        href="https://www.riigiteataja.ee/akt/748829">Isikuandmete Kaitse
+        Seadus</a>.
+
+    %dt Delikaatsed isikuandmed
+    %dd
+      Delikaatsed isikuandmed on:
+
+      %ul
+        %li
+          Poliitilisi vaateid, usulisi ja maailmavaatelisi veendumusi
+          kirjeldavad andmed, välja arvatud andmed seadusega ettenähtud korras
+          registreeritud eraõiguslike juriidiliste isikute liikmeks olemise
+          kohta;
+
+        %li Etnilist päritolu ja rassilist kuuluvust kirjeldavad andmed;
+        %li Andmed terviseseisundi või puude kohta;
+        %li Andmed pärilikkuse informatsiooni kohta;
+        %li
+          Biomeetrilised andmed (eelkõige sõrmejälje-, peopesajälje- ja
+          silmaiirisekujutis ning geeniandmed);
+        %li Andmed seksuaalelu kohta;
+        %li Andmed ametiühingu liikmelisuse kohta;
+        %li
+          Andmed süüteo toimepanemise või selle ohvriks langemise kohta enne
+          avalikku kohtuistungit või õigusrikkumise asjas otsuse langetamist
+          või asja menetluse lõpetamist.
+
+      %p
+        Delikaatsete isikuandmete töötleja peab delikaatsete isikuandmete
+        töötlemise registreerima Andmekaitse inspektsioonis va juhul kui ta
+        on määranud isikuandmete kaitse eest vastutava isiku. Isikuandmete
+        kaitse eest vastutava isiku määramisest ja tema volituste lõppemisest
+        tuleb viivitamata teavitada Andmekaitse Inspektsiooni.
+
+      %p
+        Isikuandmete, sh delikaatsete isikuandmete, kaitset reguleerib <a
+        href="https://www.riigiteataja.ee/akt/748829">Isikuandmete Kaitse
+        Seadus</a>.
+
+    %dt API
+    %dd
+      API (<em>Application Programming Interface</em>) on tarkvaraprogrammi
+      rakendusliides, mis võimaldab tarkvararakendustel omavahel suhelda,
+      kasutades selleks kindlaksmääratud reeglistikku (suhtlusprotokolli).
+
+    %dt X-tee
+    %dd
+      X-tee on riigi infosüsteemide andmevahetuskiht, mille põhieesmärgiks on
+      riigi kodanikele, asutustele ja ametnikele riigi terviklikele
+      andmekogudele mugava ligipääsu tagamine ja turvalise andmevahetuse
+      võimaldamine.
+
+    %dt Teenusserver
+    %dd
+      Käesolevas dokumendis loetakse teenusserveriks nutiseadmest väljaspool
+      asuvat teenusepakkuja tugiteenuste komplekti, mis on vajalik
+      nutirakenduse täielikuks toimimiseks.
+
+    %dt ISKE
+    %dd
+      %p
+        Riigi poolt väljatöötatud <a
+        href="https://www.ria.ee/iske/">„infosüsteemide kolmeastmeline
+        etalonturbe süsteem“</a>, mis on loodud eelkõige riigi ja kohaliku
+        omavalitsuse infosüsteemidele ning nendega seotud infovaradele
+        turvalisuse tagamiseks.
+
+      %p
+        ISKE väljatöötamisel ja arendamisel on aluseks võetud Saksamaa BSI
+        (Bundesamt für Sicherheit in der Informationstechnik) avaldatav
+        infoturbe standard (IT-Grundschutz).
+
+    %dt AKI
+    %dd
+      %a(href="https://www.aki.ee") Andmekaitse Inspektsioon 
+
+    %dt RIA
+    %dd
+      %a(href="https://www.ria.ee") Riigi Infosüsteemi Amet
