--- a/content/assets/stylesheets/default.scss
+++ b/content/assets/stylesheets/default.scss
@@ -3,6 +3,8 @@
 $green: #8CC140;
 $black: #1A1919;
 
+strong { font-weight: bold; }
+em { font-style: italic; }
 li { margin-left: 20px; }
 
 body {
@@ -116,4 +118,11 @@ a.edit {
   font-size: 16px !important;
   text-decoration: none !important;
   &:hover { color: black !important; }
+}
+
+#glossary {
+  line-height: 1.4;
+
+  dt { font-weight: bold; }
+  dd + dt { margin-top: 20px; }
 }
