--- a/content/index.haml
+++ b/content/index.haml
@@ -66,6 +66,15 @@ title: "NutiKaitse"
     mobiilirakendus, mille väljatöötamisel on arvesse võetud parimaid
     arenduspraktikaid.
 
+  %h3 Kontakt
+  %ul
+    %li
+      %a(href="mailto:kristi@vaatamaailma.ee") Kristi Kivilo
+    %li
+      %a(href="mailto:jaanus@idee.ee") Jaanus Loitmaa
+    %li
+      %a(href="mailto:andri@dot.ee") Andri Möll
+
 %section#authentication
   %h2 Autentimine
   %ol.guidelines
