Add Myriad font.

--- a/content/assets/stylesheets/default.scss
+++ b/content/assets/stylesheets/default.scss
@@ -12,7 +12,7 @@ body {
 
   background: white;
   color: black;
-  font-family: "Myriad Pro", Helvetica, sans-serif;
+  font-family: Myriad, "Myriad Pro", Helvetica, sans-serif;
   font-size: 15px;
 }
 
