Use Haml's Markdown block for introduction.

--- a/content/index.haml
+++ b/content/index.haml
@@ -24,43 +24,38 @@ title: "NutiKaitse"
 
 %section#intro
   %h2 Sissejuhatus
-  %p
+  :markdown
     Nutirakenduste turvalise arenduse suunised on välja töötatud projekti
     „Nutikaitse 2017“ raames. „NutiKaitse 2017“ on 2013 aasta novembris
     algatatud riigi ja erasektori koostöös läbiviidav projekt, mille eesmärk on
     kaasa aidata mobiilsete e-teenuste ja lahenduste turvalisele toimimisele ja
     kasutamisele ajal, mil veebitoimingud on kolinud inimese taskusse.
 
-  %p
     „NutiKaitse 2017“ koostööleppe algatajad ja allkirjastajad on:
 
-  %ul
-    %li Sertifitseerimiskeskus
-    %li Riigi Infosüsteemi Amet
-    %li Swedbank Eesti
-    %li SEB Pank
-    %li Elion Ettevõtted
-    %li EMT
-    %li Elisa Eesti
-    %li Tele2 Eesti
+    - Sertifitseerimiskeskus
+    - Riigi Infosüsteemi Amet
+    - Swedbank Eesti
+    - SEB Pank
+    - Elion Ettevõtted
+    - EMT
+    - Elisa Eesti
+    - Tele2 Eesti
 
-  %p
     Projekti koordineerib Vaata Maailma Sihtasutus. Koostööleppega liitujad
     soovivad üheskoos tõsta nutiseadmete kasutajate, arendajate ja müüjate
     turvateadlikkust ning kasutamisoskusi, luues seejuures võimalusi, et
     turvaline tarkvara oleks lihtsalt ja kasutajasõbralikult kättesaadav.
 
   %h3 Dokumendi eesmärk
-  %p
+  :markdown
     Dokumendi eesmärgiks on sätestada põhinõuded ja suunised, mida tuleb
     jälgida nutiseadmete jaoks rakenduste väljatöötamisel, sh nii riiklike
     tellimuste puhul kui soovi korral ka eraettevõtluses.
 
-  %p
     Nutirakenduste arenduse suunised on mõeldud töövahendina kasutamiseks nii
     arenduste tellijale kui arendajale.
 
-  %p
     Dokument käsitleb erinevaid nutirakenduste arendusega seotud teemasid.
     Teemade kaupa on välja toodud põhinõuded, millega tuleb arendamisel
     arvestada, et lõpptulemusena valmiks turvaline ja mugavalt kasutatav
@@ -68,13 +63,10 @@ title: "NutiKaitse"
     arenduspraktikaid.
 
   %h3 Kontakt
-  %ul
-    %li
-      %a(href="mailto:kristi@vaatamaailma.ee") Kristi Kivilo
-    %li
-      %a(href="mailto:jaanus@idee.ee") Jaanus Loitmaa
-    %li
-      %a(href="mailto:andri@dot.ee") Andri Möll
+  :markdown
+    - [Kristi Kivilo](mailto:kristi@vaatamaailma.ee)
+    - [Jaanus Loitmaa](mailto:jaanus@idee.ee)
+    - [Andri Möll](mailto:andri@dot.ee)
 
 %section#authentication
   %h2 Autentimine
