--- a/content/assets/stylesheets/default.scss
+++ b/content/assets/stylesheets/default.scss
@@ -1,5 +1,9 @@
 @import "reset";
 @import "lib";
+@import "compass/css3/appearance";
+$page-width: 960px;
+$page-padding: 20px;
+$icon-height: 72px;
 $green: #8CC140;
 $black: #1A1919;
 
@@ -7,13 +11,60 @@ strong { font-weight: bold; }
 em { font-style: italic; }
 li { margin-left: 20px; }
 
+center {
+  max-width: $page-width;
+  margin: 0 auto;
+  padding: 0 $page-padding;
+  text-align: inherit;
+}
+
 body {
-  padding-bottom: 80px;
+  padding-bottom: 60px;
 
   background: white;
   color: black;
-  font-family: Myriad, "Myriad Pro", Helvetica, sans-serif;
-  font-size: 15px;
+  font-family: Helvetica, Arial, sans-serif;
+  font-size: 14px;
+
+  // Without an explicit text-align, Internet Explorer (9 at least) has no
+  // text-align value to inherit from for <center>.
+  text-align: left;
+}
+
+h1,
+h2,
+h3,
+nav {
+  // Helvetica Neue has more weights than plain Helvetica.
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+section {
+  page-break-before: always;
+  break-before: page;
+
+  p { line-height: 1.5; }
+  p + p { margin-top: 20px; }
+  ul, ol { margin-top: 10px; margin-bottom: 10px; }
+  a { word-wrap: break-word; }
+  p + h3 { margin-top: 20px; }
+
+  & + section { margin-top: 80px; }
+
+  center {
+    @media screen { padding-left: ($page-width / 3) + $page-padding; }
+  }
+}
+
+nav h2,
+section h2 {
+  line-height: 1.3;
+  font-size: 36px;
+  margin-bottom: 20px;
+}
+
+section h3 {
+  font-weight: bold;
 }
 
 #header {
@@ -28,98 +79,175 @@ body {
   }
 
   h1 {
-    font-size: 40px;
+    margin: 0 auto;
+    font-size: 36px;
     color: $black;
+    font-weight: 300;
+    max-width: 500px;
   }
 
   h2 {
     margin-top: 20px;
-    font-size: 18px;
+    font-size: 17px;
+    font-weight: 500;
   }
+}
+
+#intro {
+  background: #2f2f2f;
+  padding: 20px 0;
+  margin-bottom: 40px;
+  overflow: hidden;
+  color: #ebebeb;
+
+  center { padding: 0; }
+  p { text-align: justify; }
+  a { color: inherit; }
+
+  .left, .right {
+    width: 50%;
+    padding: $page-padding;
+  }
+
+  .left { float: left; }
+  .right { float: right; }
+
+  .both {
+    padding: 10px $page-padding 0;
+    clear: both;
+
+    h3 { padding-top: 10px; }
+    p, h3, ul { text-align: center; }
+
+    li {
+      margin-left: 0;
+      list-style-type: none;
+      display: inline;
+      line-height: 1.5;
+    }
+
+    li + li:before { content: " • "; display: inline; }
+  }
+}
+
+#intro ~ section {
+  // Plenty of whitespace for the top edge when jumping to anchors.
+  padding-top: 40px;
 }
 
 #toc {
+  text-align: right;
+
+  // Reset padding as it'll get ignored when position is fixed.
+  center { padding: 0; }
+
+  nav {
+    top: 0;
+    float: left;
+    padding: (40px + $icon-height + 30px) $page-padding 0;
+    width: $page-width / 3;
+  }
+
   li {
     margin-left: 0;
+    line-height: 1.5;
     list-style-type: none;
-    text-align: center;
-    line-height: 1.4;
   }
+
+  li + li { margin-top: 5px; }
+
+  h2 { font-weight: 300; }
 
   a {
     color: $black;
-    font-size: 18px;
+    font-size: 15px;
     text-decoration: none;
+    font-weight: 500;
   }
+
+  a.selected {
+    font-weight: bold;
+    color: $green;
+  }
+
+  @media print { display: none; }
 }
 
-header,
-nav,
-section {
-  max-width: 620px;
-  margin: 0 auto;
+#progress {
+  margin-top: 40px;
+  line-height: 1.5;
 
-  & + section { margin-top: 80px; }
+  .done, .of, .total { font-size: 15px; }
+  .description { color: #a6a6a6; }
 }
 
-nav,
-section {
-  page-break-before: always;
-  break-before: page;
-}
-
-section {
-  p { line-height: 1.4; }
-  p + p { margin-top: 20px; }
-  ul, ol { margin-top: 10px; margin-bottom: 10px; }
-  a { word-wrap: break-word; }
-  p + h3 { margin-top: 20px; }
-}
-
-nav h2,
-section h2 {
-  line-height: 1.3;
-  text-align: center;
-  font-size: 40px;
-  color: $green;
-  margin-bottom: 40px;
-}
-
-section h3 {
-  font-weight: bold;
+img.icon {
+  display: block;
+  margin-bottom: 30px;
 }
 
 ol.guidelines {
   counter-reset: guideline;
+}
 
-  li.guideline {
-    margin-left: 0;
-    overflow: hidden;
+li.guideline {
+  margin-left: 0;
+  overflow: hidden;
+  line-height: 1.5;
+  padding-right: 70px;
 
-    list-style-type: none;
-    counter-increment: guideline;
+  page-break-inside: avoid;
 
-    &:before {
-      content: counter(guideline);
-      display: block;
-      float: left;
-      width: 60px;
-      height: 60px;
-      border-radius: 30px;
-      background: $green;
+  list-style-type: none;
+  counter-increment: guideline;
 
-      line-height: 64px;
-      text-align: center;
-      font-size: 36px;
-      color: white;
-    }
-
-    &.hidden:before { background: #888A8E; }
+  h3:before {
+    content: counter(guideline) ". ";
+    display: inline;
+    font-weight: bold;
   }
 
-  li.guideline + li { margin-top: 40px; }
-  div.text { margin-left: 80px; }
+  label {
+    float: right;
+    margin-right: -70px;
+    width: 60px;
+    cursor: pointer;
+
+    // Leave some room for the focus highlight:
+    padding-right: 5px;
+    padding-bottom: 10px;
+  }
+
+  input[type=checkbox] { display: none; }
+
+  .checkbox {
+    margin-left: auto;
+    border: 2px solid #cccccc;
+    border-radius: 7px;
+    width: 32px;
+    height: 32px;
+
+    cursor: pointer;
+
+    background: inline-image("checkmark.png") center no-repeat;
+    background-size: image-width("checkmark.png") / 2;
+  }
+
+  input[type=checkbox]:checked + .checkbox {
+    //color: $green;
+    border-color: $green;
+    background-color: $green;
+    background-image: inline-image("checkmark-checked.png");
+  }
+
+  p {
+    text-align: justify;
+  }
+
+  &.hidden:before { background: #888A8E; }
 }
+
+li.guideline + li { margin-top: 20px; }
 
 a.edit {
   color: #e0e0e0 !important;
@@ -133,4 +261,37 @@ a.edit {
 
   dt { font-weight: bold; }
   dd + dt { margin-top: 20px; }
+}
+
+@media screen and (min-width: 681px) and (max-width: 800px) {
+  $width: 220px;
+  #toc nav { width: $width; }
+  section center { padding-left: $width + $page-padding; }
+}
+
+@media screen and (max-width: 680px) {
+  #intro .left,
+  #intro .right {
+    width: auto;
+    float: none;
+  }
+
+  #toc {
+    text-align: left;
+  }
+
+  #toc nav {
+    position: static !important;
+    float: none;
+    padding-top: 0;
+  }
+
+  section center { padding-left: $page-padding; }
+}
+
+@media print {
+  #intro {
+    background: none;
+    color: black;
+  }
 }
