--- a/layouts/default.haml
+++ b/layouts/default.haml
@@ -2,7 +2,6 @@
 %html
   %head
     %meta(charset="utf-8")
-    = stylesheet_tag :default
 
     %title= content_for(@item, :title)|| @item[:title]
 
@@ -15,7 +14,7 @@
     -# http://www.chromium.org/developers/how-tos/chrome-frame-getting-started
     %meta(http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1")
 
+    = content_for(@item, :head)
     = @config[:env] == "development" ? render("_livereload") : ""
 
   %body= yield
-  = javascript_tag :default
