--- a/content/platform.haml
+++ b/content/platform.haml
@@ -38,41 +38,21 @@ title: "Rakenduste platvorminõuded"
         kasutajate arvudest Eestis, mujal maailmas ja teatud määral ka
         prognoosidest tulevikus.
 
-        W3Schools statistika põhjal oli jaanuar 2014 4% seadmetest mobiilsed.
-        Neist iOS 1,23%, Android 1,93% ja muu 0,84%. Selle järgi võiks nõuda,
-        et arendatavad rakendused peavad töötama iOS ja Android keskkondadel.
+        Turvalisuse aspektist lähtudes peaks OS nõuded alati lähtuma viimasest 
+        (aktiivse toega) põhiversioonist (näiteks Android 5.x, iOS 8.x,
+        Ubuntu Touch OS 14.x jne...). 
 
-        Market Share Reports järgi veebruar 2014 mobiilirakenduste kasutus
-        jaotud versiooniti järgmiselt:
+        Operatsioonisüsteemide kui brauserite puhul võiks nõuda täielikku 
+        tuge neile, mida kasutab vähemalt **5%** külastajatest.  
+        Operatsioonisüsteemidele ja brauseritele, mida kasutavad **1-5%**
+        külastajatest, võiks pakkuda piiratud tuge.  
+        Alla **1%** kasutajaskonnaga operatsioonisüsteeme ning brausereid
+        toetada võib, aga ei pea.
 
-        - Android 2.3 4,55%
-        - Android 4.0 4,98%
-        - Android 4.3 6,07%
-        - Android 4.2 6,34%
-        - Android 4.1 11,58%
-        - iPhone 22,48%
-        - iPad 29,87%.
+        ### Kasutajate osakaalu hetkeseisuga:
 
-        Kui kõiki üle 4,5% levikuga versioone arvestada tuleks Android tuge
-        nõuda alates 2.3+ versioonist. Kui tingimuseks võtta kõik üle 1% tuleks
-        ntx arvestada ka Symbian (3,5%) ja Java ME (4,44%), küll aga mitte
-        Windows Phone 7.5, mis oli 0,44%.
-
-        StatCounteri järgi piirates piirkonna Eesti peale saame tulemuseks
-        jaanaru 2014 järgmise: Android 55,71%, iOS 38,57% ja Windows Phone
-        3,43%, kõik muu on alla 1%. Selle järgi oleks minimaalne tugi vajalik
-        ka Windows Mobile 7.5le.
-
-        Clicky järgi on Eestis kõik teised peale Android ja iOS alla 1%.
-
-        Kõige täpsema info ja suhtarvud saaks ilmselt mobiilioperaatoritelt.
-        Nõuete tekitamisel ei tohi kindlasti lähtuda vaid töögrupi või mõne
-        suurettevõtte ntx Google, Microsoft huvist vaid reaalsete kasutajate
-        tehtud otustest, mida näitab hästi meil Eestis ostetud / kasutuses
-        olevate seadmete info (operaatoritelt).
-
-        Kui üldse nõuded OS versioonidele jätta siis turvalisuse asbektist
-        lähtudes peaks need alati lähtuma viimasest (aktiivse toega)
-        põhiversioonist (ntx Android 4.x, iOS 7.x, Ubuntu Touch OS 1.x jne...).
-        Ntx kohaliku rakenduse Rahvakalender (>15 tuhat) kasutajatest 76,52% on
-        Android 4.x.
+        - [Mobile Devices Statistics](http://www.w3schools.com/browsers/browsers_mobile.asp)
+        - [Market Share Statistics for Internet Technologies](http://www.netmarketshare.com/)
+        - [StatCounter Global Stats OS](http://gs.statcounter.com/#mobile+tablet-os-EE-monthly-201302-201402)
+        - [StatCounter Global Stats Browser](http://gs.statcounter.com/#mobile+tablet-browser-EE-monthly-201302-201402)
+        - [Clicky, Mobile operating systems (EE marketshare)](http://clicky.com/marketshare/ee/operating-systems/mobile/)
