Simplify platform requirements column header.

--- a/content/platform.haml
+++ b/content/platform.haml
@@ -14,7 +14,7 @@ title: "Rakenduste platvorminõuded"
   %center
     .left
       %img.icon{:src => image_path("network.png")}(height=72)
-      %h2 Veeb ja hübriidrakendused
+      %h2 Veebirakendused
       :markdown
         Mobiilsete veebirakenduste arendamisel tuleks nõudmiste ja soovitustega
         piirduda W3C poolt heaks kiidetud dokumentidega:
