Add date to platform requirements.

--- a/content/platform.haml
+++ b/content/platform.haml
@@ -8,7 +8,7 @@ title: "Rakenduste platvorminõuded"
   %center
     %img.logo(alt="Nutikaitse"){:src => image_path("nutikaitse.png")}
     %h1 Nutirakenduste platvorminõuded
-    %h2 Vaata Maailma SA
+    %h2 Vaata Maailma SA, <time>3. dets 2014</time>
 
 %section#requirements
   %center
