--- a/content/guidelines.haml
+++ b/content/guidelines.haml
@@ -11,51 +11,7 @@ title: "NutiKaitse"
     %h2 Vaata Maailma SA
 
 %section#intro
-  %center
-    .left
-      :markdown
-        Dokumendi eesmärgiks on sätestada põhinõuded ja suunised, mida tuleb
-        jälgida nutiseadmete jaoks rakenduste väljatöötamisel, sh nii riiklike
-        tellimuste puhul kui soovi korral ka eraettevõtluses. Nutirakenduste
-        arenduse suunised on mõeldud töövahendina kasutamiseks nii arenduste
-        tellijale kui arendajale.
-
-        Dokument käsitleb erinevaid nutirakenduste arendusega seotud teemasid.
-        Teemade kaupa on välja toodud põhinõuded, millega tuleb arendamisel
-        arvestada, et lõpptulemusena valmiks turvaline ja mugavalt kasutatav
-        mobiilirakendus, mille väljatöötamisel on arvesse võetud parimaid
-        arenduspraktikaid.
-
-    .right
-      :markdown
-        Nutirakenduste turvalise arenduse suunised on välja töötatud projekti
-        "Nutikaitse 2017" raames. Project on 2013 aasta novembris algatatud
-        ning riigi ja erasektori koostöös läbiviidav, mille eesmärk on kaasa
-        aidata mobiilsete e-teenuste ja lahenduste turvalisele toimimisele ja
-        kasutamisele ajal, mil veebitoimingud on kolinud inimese taskusse.
-
-        Projekti koordineerib Vaata Maailma Sihtasutus. Koostööleppega liitujad
-        soovivad üheskoos tõsta nutiseadmete kasutajate, arendajate ja müüjate
-        turvateadlikkust ning kasutamisoskusi, luues seejuures võimalusi, et
-        turvaline tarkvara oleks lihtsalt ja kasutajasõbralikult kättesaadav.
-
-    .both
-      %h3 Koostööleppe algatajad ja allkirjastajad
-      :markdown
-        - [Sertifitseerimiskeskus](https://sk.ee)
-        - [Riigi Infosüsteemi Amet](https://www.ria.ee)
-        - [Swedbank Eesti](https://www.swedbank.ee)
-        - [SEB Pank](http://www.seb.ee)
-        - [Elion Ettevõtted](https://www.elion.ee)
-        - [EMT](https://www.emt.ee)
-        - [Elisa Eesti](https://www.elisa.ee)
-        - [Tele2 Eesti](http://www.tele2.ee)
-
-      %h3 Kontakt
-      :markdown
-        - [Kristi Kivilo](mailto:kristi@vaatamaailma.ee)
-        - [Jaanus Loitmaa](mailto:jaanus@idee.ee)
-        - [Andri Möll](mailto:andri@dot.ee)
+  %center= @items["/_guidelines_intro/"].compiled_content
 
 #toc
   %center
