--- a/content/assets/stylesheets/guidelines.scss
+++ b/content/assets/stylesheets/guidelines.scss
@@ -8,7 +8,6 @@ body {
 section {
   page-break-before: always;
   break-before: page;
-
 }
 
 section {
@@ -38,7 +37,7 @@ section h3 {
 
 #header {
   margin-top: 150px;
-  margin-bottom: 200px;
+  margin-bottom: 20px;
   text-align: center;
 
   .logo {
@@ -60,6 +59,8 @@ section h3 {
     font-size: 17px;
     font-weight: 500;
   }
+
+  .auxlogo { margin-top: 120px; }
 }
 
 #intro {
