Comment out hidden guidelines.

--- a/content/guidelines.haml
+++ b/content/guidelines.haml
@@ -106,7 +106,7 @@ title: "NutiKaitse"
       = render "_guideline", :name => "privacy-policy"
       = render "_guideline", :name => "data-validation"
       = render "_guideline", :name => "digital-signature-algorithms"
-      = render "_guideline", :name => "data-server"
+      -#= render "_guideline", :name => "data-server"
 
 %section#network
   %center
@@ -134,7 +134,7 @@ title: "NutiKaitse"
       = render "_guideline", :name => "server-security-testing"
       = render "_guideline", :name => "server-hardening"
       = render "_guideline", :name => "dos"
-      = render "_guideline", :name => "backend-testing"
+      -#= render "_guideline", :name => "backend-testing"
       = render "_guideline", :name => "server-logs"
 
 %section#app
@@ -170,7 +170,7 @@ title: "NutiKaitse"
       = render "_guideline", :name => "terms-of-service"
       = render "_guideline", :name => "user-identification"
       = render "_guideline", :name => "terms-of-service-contradictions"
-      = render "_guideline", :name => "nonfree-features"
+      -#= render "_guideline", :name => "nonfree-features"
       = render "_guideline", :name => "nonfree-authentication"
       = render "_guideline", :name => "nonfree-confirmation"
       = render "_guideline", :name => "nonfree-usage"
